fix: languages besides css have readable comments now

--- a/styles/base.less
+++ b/styles/base.less
@@ -56,33 +56,10 @@ atom-text-editor {
 // Syntax styles
 .syntax--comment {
   color: @syntax-gutter-text-color;
-  &.syntax--line {
-  // background: linear-gradient(90deg, transparent, @bg1, darken(@Magenta, 20%));
-  // background: linear-gradient(90deg, transparent, @bg1, transparent);
-  // background: linear-gradient(90deg, transparent, darken(@Magenta, 20%), transparent);
-  // background: linear-gradient(90deg, transparent, darken(@ForegroundColour, 15%), transparent);
-  // background: linear-gradient(90deg, @bg1, darken(@Magenta, 15%), transparent, darken(@Magenta, 15%));
-  // background: linear-gradient(90deg, @bg1, darken(@Magenta, 20%), transparent, @bg1);
-  // background: linear-gradient(90deg, transparent, darken(@Magenta, 20%), transparent, @bg1);
-  // background: linear-gradient(90deg, darken(@Magenta, 20%), transparent, @bg1);
-  // background: linear-gradient(90deg, darken(@Magenta, 18%), transparent);
-  // background: darken(@Magenta, 18%);
-  // background: linear-gradient(30deg, transparent, lighten(@bg1, 1%) 25%);
-  // background: linear-gradient(120deg, transparent 10px, darken(@Magenta, 20%) 35px, lighten(@bg1, 6%));
   background: linear-gradient(120deg, transparent 10px, lighten(@bg1, 1%) 35px);
-  // background: @bg1;
-  // background: linear-gradient(45deg, transparent, darken(@Magenta, 20%));
-  // border-right: 4px;
   padding-right: 4px;
   padding-bottom: 1px;
   border-radius: 0 6px 6px 0;
-  // background: linear-gradient(@syntax-background-color, @syntax-background-color),
-  // linear-gradient(to bottom,  @Magenta, @syntax-gutter-text-color);
-  // background-origin: content-box, border-box;
-  // background-repeat: no-repeat; /* this is important */
-  // border: 3px solid transparent;
-  // border-width: 0 0 0 3px ;
-}
 }
 
 .syntax--keyword {
